test/mock/plugins/invalid/invalid-request-method.js
module.exports = {
  service: 'lambda',
  methods: {
    foo: {
      request: true,
    },
  },
}
